# Reproducibility

./: README.md
Worlds/: CL_10obj_with_robot  CL_15obj.world  CL_15obj_with_robot.world  CL_6obj.world  CL_6obj_with_robot.world  MGO_5obj.world  MGO_5obj_with_robot.world  TU_3D_10obj.world  TU_3D_6obj.world  TU_3obj.world  TU_3obj_with_robot.world  TU_5obj.world  TU_5obj_with_robot.world
packagesToReporduceTotoUsingTiagoAndGazebo/: README.txt
packagesToReporduceTotoUsingTiagoAndGazebo/avoid/: CMakeLists.txt  package.xml
packagesToReporduceTotoUsingTiagoAndGazebo/avoid/include/: State_AVOID_Variables.h  State_DO_NOT_SUBSUME.h  State_DO_NOT_SUBSUME_VarRefs.mm  State_Initial_OnEntry.mm  State_Initial_Variables.h  State_TURN_LEFT_OnEntry.mm  State_TURN_LEFT_Transition_0.expr  State_TURN_LEFT_Variables.h  State_TURN_RIGTH_Variables.h
packagesToReporduceTotoUsingTiagoAndGazebo/avoid/machine/: Suggested_CMakeLists_avoid.txt
packagesToReporduceTotoUsingTiagoAndGazebo/avoid/machine/avoid.machine/: Layout.plist  State_AVOID.h  State_AVOID.mm  State_AVOID_OnEntry.mm  State_AVOID_Transition_0.expr  State_AVOID_Transition_1.expr  State_AVOID_VarRefs.mm  State_DO_NOT_SUBSUME_OnEntry.mm  State_DO_NOT_SUBSUME_Variables.h  State_Initial.h  State_InitialPseudoState.h  State_TURN_LEFT.h  State_TURN_RIGTH.h  State_TURN_RIGTH.mm  State_TURN_RIGTH_OnEntry.mm  State_TURN_RIGTH_Transition_0.expr  State_TURN_RIGTH_VarRefs.mm  States  WindowLayout.plist  avoid.h  avoid.mm  avoid_Includes.h  avoid_VarRefs.mm  avoid_Variables.h
packagesToReporduceTotoUsingTiagoAndGazebo/avoid/src/: State_DO_NOT_SUBSUME.mm  State_Initial.mm  State_InitialPseudoState.mm  State_TURN_LEFT.mm
packagesToReporduceTotoUsingTiagoAndGazebo/gusimplewhiteboard/: CMakeLists.txt
packagesToReporduceTotoUsingTiagoAndGazebo/gusimplewhiteboard/include/: WBFunctor_types_generated.h  guwhiteboardgetter.cpp  guwhiteboardposter.cpp  guwhiteboardtypelist.tsl  guwhiteboardtypelist_c_generated.h  guwhiteboardtypelist_generated.h  guwhiteboardtypelist_tcp_generated.h
packagesToReporduceTotoUsingTiagoAndGazebo/gusimplewhiteboard/include/typeClassDefs/: SENSORSSonarSensors.h  SwitchSubsumption.h  wb_switch_subsumption.h
packagesToReporduceTotoUsingTiagoAndGazebo/gusimplewhiteboard/src/: gu_util.cpp  guwhiteboardtypelist_c_typestrings_generated.c
packagesToReporduceTotoUsingTiagoAndGazebo/guwhiteboardtypegenerator/: CMakeLists.txt  package.xml
packagesToReporduceTotoUsingTiagoAndGazebo/guwhiteboardtypegenerator/src/: guwhiteboardtypegenerator.cpp
packagesToReporduceTotoUsingTiagoAndGazebo/stroll/: CMakeLists.txt  package.xml
packagesToReporduceTotoUsingTiagoAndGazebo/stroll/include/: State_Initial.h  State_MOVE_BACK.h  State_MOVE_BACK_OnEntry.mm  State_MOVE_BACK_VarRefs.mm  State_MOVE_BACK_Variables.h  State_MOVE_FORWARD_OnEntry.mm  State_STOP_OnEntry.mm  State_STOP_Transition_0.expr  State_STOP_VarRefs.mm  State_STOP_Variables.h  State_STROLL_OnEntry.mm  State_STROLL_Transition_0.expr  State_STROLL_Transition_1.expr  stroll.h  stroll_VarRefs.mm  stroll_Variables.h
packagesToReporduceTotoUsingTiagoAndGazebo/stroll/machine/: Suggested_CMakeLists_stroll.txt
packagesToReporduceTotoUsingTiagoAndGazebo/stroll/machine/stroll.machine/: Layout.plist  State_Initial.mm  State_InitialPseudoState.h  State_Initial_OnEntry.mm  State_MOVE_BACK.mm  State_MOVE_FORWARD.h  State_MOVE_FORWARD.mm  State_MOVE_FORWARD_VarRefs.mm  State_MOVE_FORWARD_Variables.h  State_STOP.h  State_STROLL.h  State_STROLL.mm  State_STROLL_VarRefs.mm  State_STROLL_Variables.h  States  WindowLayout.plist  stroll.mm  stroll_Includes.h
packagesToReporduceTotoUsingTiagoAndGazebo/stroll/src/: State_InitialPseudoState.mm  State_STOP.mm
packagesToReporduceTotoUsingTiagoAndGazebo/switchmotion/: CMakeLists.txt  package.xml
packagesToReporduceTotoUsingTiagoAndGazebo/switchmotion/include/: State_BACKWARD.h  State_BACKWARD_OnEntry.mm  State_END_VarRefs.mm  State_END_Variables.h  State_FILL_STOP_OnEntry.mm  State_FILL_STOP_Variables.h  State_FORWARD.h  State_GET_HIGHEST_PRIORITY_COMMAND_OnEntry.mm  State_GET_HIGHEST_PRIORITY_COMMAND_Transition_0.expr  State_GET_HIGHEST_PRIORITY_COMMAND_Transition_1.expr  State_GET_HIGHEST_PRIORITY_COMMAND_Transition_2.expr  State_GET_HIGHEST_PRIORITY_COMMAND_Transition_4.expr  State_GET_HIGHEST_PRIORITY_COMMAND_Transition_5.expr  State_GET_HIGHEST_PRIORITY_COMMAND_VarRefs.mm  State_GET_HIGHEST_PRIORITY_COMMAND_Variables.h  State_Initial.h  State_InitialPseudoState.h  State_NO_COMMAND_VarRefs.mm  State_SEND_COMAMND.h  State_SEND_COMAMND_Transition_1.expr  State_SEND_COMAMND_VarRefs.mm  State_TURN_LEFT_VarRefs.mm  State_TURN_RIGHT.h  State_TURN_RIGHT_OnEntry.mm  State_TURN_RIGHT_Variables.h  State_TURN_STOP.h  State_TURN_STOP_VarRefs.mm  State_TURN_STOP_Variables.h  switchmotion_Includes.h  switchmotion_VarRefs.mm  switchmotion_Variables.h
packagesToReporduceTotoUsingTiagoAndGazebo/switchmotion/machine/: Suggested_CMakeLists_switchmotion.txt  machine_catkin_setup.sh
packagesToReporduceTotoUsingTiagoAndGazebo/switchmotion/machine/switchmotion.machine/: Layout.plist  State_BACKWARD_VarRefs.mm  State_BACKWARD_Variables.h  State_END.h  State_FILL_STOP.h  State_FILL_STOP.mm  State_FILL_STOP_VarRefs.mm  State_FORWARD.mm  State_FORWARD_OnEntry.mm  State_FORWARD_VarRefs.mm  State_FORWARD_Variables.h  State_GET_HIGHEST_PRIORITY_COMMAND.h  State_GET_HIGHEST_PRIORITY_COMMAND.mm  State_GET_HIGHEST_PRIORITY_COMMAND_Transition_3.expr  State_Initial_OnEntry.mm  State_Initial_Transition_1.expr  State_Initial_VarRefs.mm  State_NO_COMMAND.h  State_NO_COMMAND.mm  State_TURN_LEFT.h  (+14 more)
packagesToReporduceTotoUsingTiagoAndGazebo/switchmotion/src/: State_BACKWARD.mm  State_END.mm  State_Initial.mm  State_InitialPseudoState.mm  State_SEND_COMAMND.mm
packagesToReporduceTotoUsingTiagoAndGazebo/tiago_laserscan_to_toto_sonar/: CMakeLists.txt  package.xml
packagesToReporduceTotoUsingTiagoAndGazebo/tiago_laserscan_to_toto_sonar/include/: gu_util.h
packagesToReporduceTotoUsingTiagoAndGazebo/tiago_laserscan_to_toto_sonar/src/: tiago_laserscan_to_toto_sonar_node.cpp
